--- a/exo/x86_64/extra/PKGBUILD
+++ b/exo/x86_64/extra/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=exo
 pkgver=4.16.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Application library for Xfce"
 arch=('x86_64')
 url="https://www.xfce.org/"
@@ -12,11 +12,14 @@ license=('GPL2' 'LGPL')
 groups=('xfce4')
 depends=('libxfce4ui' 'hicolor-icon-theme')
 makedepends=('intltool')
-source=(https://archive.xfce.org/src/xfce/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.bz2)
-sha256sums=('722dff3c3fe23f0a65405e63889cf247c99d092d3f9fb16dec78d062cfb8fae6')
+source=(https://archive.xfce.org/src/xfce/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.bz2
+        $pkgname-exo-open-only-execute-local-desktop-files.patch::https://gitlab.xfce.org/xfce/exo/-/commit/c71c04ff5882.patch)
+sha256sums=('722dff3c3fe23f0a65405e63889cf247c99d092d3f9fb16dec78d062cfb8fae6'
+            'a864116f1692ca541d4837640e9c535cc127ae2420f64cbafff329f4b4cc68a0')
 
 prepare() {
   cd "$srcdir/$pkgname-$pkgver"
+  patch -Np1 -i ../$pkgname-exo-open-only-execute-local-desktop-files.patch
 }
 
 build() {
