--- a/knewstuff/x86_64/extra/PKGBUILD
+++ b/knewstuff/x86_64/extra/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=knewstuff
 pkgver=5.94.0
-pkgrel=1
+pkgrel=2
 pkgdesc='Support for downloading application assets from the network'
 arch=(x86_64)
 url='https://community.kde.org/Frameworks'
@@ -13,11 +13,17 @@ depends=(kio kpackage attica syndication)
 makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc qt5-declarative)
 optdepends=('kirigami2: QML components')
 groups=(kf5)
-source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
+source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig}
+        https://invent.kde.org/frameworks/knewstuff/-/commit/b634b65d.patch)
 sha256sums=('aacd014f99ab66d40ae98333cb56257244ca552bc4df0ce04de4e29bae90336f'
-            'SKIP')
+            'SKIP'
+            'a8b768a3b122d6a07c3aa417a64446da6140719f419a92d98c34a694d545ce40')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 options=(debug)
+
+prepare() {
+  patch -d $pkgname-$pkgver -p1 < b634b65d.patch # Fix dialog breakage
+}
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
