[trunk] -> [extra] 'gnome-bluetooth-3.0-42.1-1' add

--- a/gnome-bluetooth-3.0/trunk/PKGBUILD
+++ b/gnome-bluetooth-3.0/trunk/PKGBUILD
@@ -3,9 +3,9 @@
 # Contributor: Roman Kyrylych <roman@archlinux.org>
 
 pkgname=gnome-bluetooth-3.0
-pkgver=42.0
+pkgver=42.1
 pkgrel=1
-pkgdesc="The GNOME Bluetooth Subsystem"
+pkgdesc="GNOME Bluetooth Subsystem"
 url="https://wiki.gnome.org/Projects/GnomeBluetooth"
 arch=(x86_64)
 license=(GPL LGPL)
@@ -15,13 +15,13 @@ makedepends=(gobject-introspection gtk-doc docbook-xsl git meson)
 checkdepends=(python-dbusmock)
 provides=(libgnome-bluetooth{,-ui}-3.0.so)
 options=(debug)
-_commit=fc488724cc543af991fb0c2c5677c58207369aaa  # tags/42.0^0
+_commit=818d9c7985e492849fc69f3284f678d7f1b70112  # tags/42.1^0
 source=("git+https://gitlab.gnome.org/GNOME/gnome-bluetooth.git#commit=$_commit")
 sha256sums=('SKIP')
 
 pkgver() {
   cd gnome-bluetooth
-  git describe --tags | sed 's/^GNOMEBT_V_//;s/_fixed//;s/_/./g;s/-/+/g'
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
@@ -33,9 +33,8 @@ build() {
   meson compile -C build
 }
 
-# test fails
 check() {
-  meson test -C build --print-errorlogs ||:
+  meson test -C build --print-errorlogs
 }
 
 package() {
