--- a/kalzium/trunk/PKGBUILD
+++ b/kalzium/trunk/PKGBUILD
@@ -21,7 +21,9 @@ options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
-    -DBUILD_TESTING=OFF
+    -DBUILD_TESTING=OFF \
+    -DCMAKE_INSTALL_PREFIX=/usr \
+    -DCMAKE_PREFIX_PATH=/usr
   cmake --build build
 }
 
