[testing] -> [extra] 'kdepim-runtime-22.04.2-1' move

--- a/kdepim-runtime/x86_64/extra/PKGBUILD
+++ b/kdepim-runtime/x86_64/extra/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdepim-runtime
-pkgver=22.04.1
+pkgver=22.04.2
 pkgrel=1
 pkgdesc='Extends the functionality of kdepim'
 arch=(x86_64)
@@ -13,13 +13,19 @@ license=(GPL LGPL FDL)
 depends=(libkolabxml kdav kholidays akonadi-calendar knotifyconfig kmbox pimcommon akonadi-notes akonadi qca-qt5 qt5-networkauth)
 makedepends=(extra-cmake-modules kdoctools libetebase boost)
 optdepends=('libetebase: EteSync resource')
-source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('b5fb61f475ce441a9db5b8258b1cb510b26391d95d95a960305250f569fb903f'
-            'SKIP')
+source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig}
+        no-qxmlpatterns.patch)
+sha256sums=('9456dab09b785cebd3580a9e3707be12adce72d303dbecf846382407e46a1913'
+            'SKIP'
+            '8a97b782f0aa44cf2071556d94395ba326117b8f3634f9793a5943fe538aa568')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
 options=(debug)
+
+prepare() {
+  patch -d $pkgname-$pkgver -p1 < no-qxmlpatterns.patch # Drop unused dependency
+}
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
