[testing] -> [extra] 'kate-22.04.2-1' move

--- a/kate/x86_64/extra/PKGBUILD
+++ b/kate/x86_64/extra/PKGBUILD
@@ -4,28 +4,18 @@
 
 pkgbase=kate
 pkgname=(kwrite kate)
-pkgver=22.04.1
-pkgrel=2
+pkgver=22.04.2
+pkgrel=1
 arch=(x86_64)
 license=(GPL LGPL FDL)
 makedepends=(extra-cmake-modules kdoctools plasma-framework knewstuff ktexteditor kactivities kuserfeedback)
-source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgbase-$pkgver.tar.xz{,.sig}
-        https://invent.kde.org/utilities/kate/-/commit/e002696b.patch
-        https://invent.kde.org/utilities/kate/-/commit/36ede44f.patch)
-sha256sums=('f46ec33d7edf8032efcd489cc431ebf3f93e703e0e7d88a51e93941fd8509849'
-            'SKIP'
-            '9ae2cfeb66985dd6302baf680f98d20f70f8e895d7ff622b0fbeb70366a4f8f4'
-            '29f66ed1b12100ae4962e10afa021cf6a5f1c0dfd952aa142b89c6776723a46e')
+source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgbase-$pkgver.tar.xz{,.sig})
+sha256sums=('7cfec8b6391d89914aa73ead3902fdafab92f73368e0e26743cd4aab1ef117de'
+            'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
 options=(debug)
-
-prepare() {
-# Fix crash when opening settings
-  patch -d $pkgbase-$pkgver -p1 < e002696b.patch
-  patch -d $pkgbase-$pkgver -p1 < 36ede44f.patch
-}
 
 build() {
   cmake -B build -S $pkgbase-$pkgver \
