--- a/tmux/x86_64/community/PKGBUILD
+++ b/tmux/x86_64/community/PKGBUILD
@@ -1,8 +1,8 @@
-# Maintainer: Christian Hesse <mail@eworm.de>
+# Maintainer: Nathan Owens <ndowens@artixlinux.org>
 
 pkgname=tmux
 pkgver=3.3_a
-pkgrel=1
+pkgrel=2
 pkgdesc='A terminal multiplexer'
 url='https://github.com/tmux/tmux/wiki'
 arch=('x86_64')
