--- a/kosmindoormap/x86_64/extra/PKGBUILD
+++ b/kosmindoormap/x86_64/extra/PKGBUILD
@@ -1,8 +1,8 @@
-# Maintainer: Antonio Rojas <arojas@archlinux.org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
 
 pkgname=kosmindoormap
 pkgver=22.04.2
-pkgrel=1
+pkgrel=2
 pkgdesc='OSM multi-floor indoor map renderer'
 arch=(x86_64)
 url='https://www.kde.org'
