--- a/gimp/trunk/PKGBUILD
+++ b/gimp/trunk/PKGBUILD
@@ -1,9 +1,9 @@
-# Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
+# Maintainer: Nathan Owens <ndowens@artixlinux.org>
 # Contributor: Daniel Isenmann <daniel@archlinux.org>
 
 pkgname=gimp
-pkgver=2.10.30
-pkgrel=3.1
+pkgver=2.10.32
+pkgrel=1
 pkgdesc='GNU Image Manipulation Program'
 url='https://www.gimp.org/'
 arch=('x86_64')
@@ -11,13 +11,13 @@ license=('GPL' 'LGPL')
 depends=('babl' 'dbus-glib' 'desktop-file-utils' 'gegl' 'glib-networking' 'hicolor-icon-theme'
          'openjpeg2' 'lcms2' 'libheif' 'libexif' 'libgudev' 'libmng' 'libmypaint' 'librsvg' 'libwebp'
          'libwmf' 'libxmu' 'libxpm' 'mypaint-brushes1' 'openexr' 'poppler-data' 'gtk2' 'graphviz')
-makedepends=('alsa-lib' 'curl' 'ghostscript' 'gtk-doc' 'intltool' 'iso-codes' 'poppler-glib' 'gvfs') 
+makedepends=('alsa-lib' 'curl' 'ghostscript' 'gtk-doc' 'intltool' 'iso-codes' 'poppler-glib')
 optdepends=('gutenprint: for sophisticated printing only as gimp has built-in cups print support'
-            'gvfs: for HTTP and HTTPS support'
             'poppler-glib: for pdf support'
             'alsa-lib: for MIDI event controller module'
             'curl: for URI support'
-            'ghostscript: for postscript support')
+            'ghostscript: for postscript support'
+            'gvfs: for HTTP/S support (and many other schemes)')
 conflicts=('gimp-plugin-wavelet-decompose')
 replaces=('gimp-plugin-wavelet-decompose')
 options=('debug')
@@ -25,7 +25,7 @@ install=gimp.install
 source=(https://download.gimp.org/pub/gimp/v${pkgver%.*}/${pkgname}-${pkgver}.tar.bz2
         0001-no-check-update.patch
         linux.gpl)
-sha256sums=('88815daa76ed7d4277eeb353358bafa116cd2fcd2c861d95b95135c1d52b67dc'
+sha256sums=('3f15c70554af5dcc1b46e6dc68f3d8f0a6cc9fe56b6d78ac08c0fd859ab89a25'
             'ac3e8b44cf391f4ab3050652f2cc1f146f451fb25178d5a596d905f5bad13fcf'
             '1003bbf5fc292d0d63be44562f46506f7b2ca5729770da9d38d3bb2e8a2f36b3')
 
