--- a/xfce4-wavelan-plugin/x86_64/extra/PKGBUILD
+++ b/xfce4-wavelan-plugin/x86_64/extra/PKGBUILD
@@ -1,9 +1,9 @@
-# Maintainer: Evangelos Foutras <evangelos@foutrelis.com>
+# Maintainer: qontinuum <qontinuum@artixlinux.org>
 # Contributor: AndyRTR <andyrtr@archlinux.org>
 # Contributor: Tobias Kieslich <tobias (at) archlinux.org>
 
 pkgname=xfce4-wavelan-plugin
-pkgver=0.6.2
+pkgver=0.6.3
 pkgrel=1
 pkgdesc="Plugin to monitor wifi connectivity for the Xfce4 panel"
 arch=('x86_64')
@@ -13,7 +13,7 @@ groups=('xfce4-goodies')
 depends=('xfce4-panel')
 makedepends=('intltool')
 source=(https://archive.xfce.org/src/panel-plugins/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.bz2)
-sha256sums=('ea7aa36650c596b1a29567d100776c68ed732aaf0f48c92245c4466058b5481d')
+sha256sums=('61c0c2f56cb70872d403b770dd76349df9ff24c0dbe905ee1b4f913c34d8f72b')
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
