--- a/inkscape/x86_64/extra/PKGBUILD
+++ b/inkscape/x86_64/extra/PKGBUILD
@@ -1,11 +1,11 @@
-# Maintainer: Gaetan Bisson <bisson@archlinux.org>
+# Maintainer: Nathan Owens <ndowens@artixlinux.org>
 # Contributor: Tobias Kieslich <tobias@justdreams.de>
 # Contributor: tobias <tobias@archlinux.org>
 
 pkgname=inkscape
 pkgver=1.2
 _tag='dc2aedaf03f19bd890529a9e4720a02465fa1b6c' # git rev-parse INKSCAPE_${pkgver/./_}
-pkgrel=3
+pkgrel=4
 pkgdesc='Professional vector graphics editor'
 url='https://inkscape.org/'
 license=('GPL' 'LGPL')
