[testing] -> [extra] 'kig-22.04.2-2' move

--- a/kig/x86_64/extra/PKGBUILD
+++ b/kig/x86_64/extra/PKGBUILD
@@ -1,10 +1,10 @@
-# Maintainer: Felix Yan <felixonmars@archlinux.org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kig
 pkgver=22.04.2
-pkgrel=1
+pkgrel=2
 pkgdesc='Interactive Geometry'
 url='https://apps.kde.org/kig/'
 arch=(x86_64)
