--- a/kopeninghours/x86_64/extra/PKGBUILD
+++ b/kopeninghours/x86_64/extra/PKGBUILD
@@ -1,8 +1,8 @@
-# Maintainer: Antonio Rojas <arojas@archlinux.org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
 
 pkgname=kopeninghours
 pkgver=22.04.2
-pkgrel=1
+pkgrel=2
 pkgdesc='Library for parsing and evaluating OSM opening hours expressions'
 arch=(x86_64)
 url='https://www.kde.org'
