--- a/libkolabxml/x86_64/extra/PKGBUILD
+++ b/libkolabxml/x86_64/extra/PKGBUILD
@@ -1,9 +1,9 @@
-# Maintainer: Felix Yan <felixonmars@archlinux.org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=libkolabxml
 pkgver=1.1.6
-pkgrel=17.1
+pkgrel=18
 pkgdesc="Kolab XML Format Schema Definitions Library"
 url='https://www.kolab.org/'
 arch=('x86_64')
