--- a/maeparser/x86_64/extra/PKGBUILD
+++ b/maeparser/x86_64/extra/PKGBUILD
@@ -1,8 +1,8 @@
-# Maintainer: Antonio Rojas <arojas@archlinux.org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
 
 pkgname=maeparser
 pkgver=1.2.4
-pkgrel=5
+pkgrel=6
 pkgdesc="Maestro file parser"
 arch=(x86_64)
 url="https://github.com/schrodinger/maeparser"
