[trunk] -> [extra] 'discover-5.24.5-1.1' add

--- a/discover/x86_64/extra/PKGBUILD
+++ b/discover/x86_64/extra/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=discover
 pkgver=5.24.5
-pkgrel=1
+pkgrel=1.1
 pkgdesc='KDE and Plasma resources management GUI'
 arch=(x86_64)
 url='https://kde.org/plasma-desktop/'
@@ -13,8 +13,7 @@ makedepends=(extra-cmake-modules plasma-framework packagekit-qt5 flatpak fwupd)
 optdepends=('packagekit-qt5: to manage packages from Arch Linux repositories' 'flatpak: Flatpak packages support'
             'fwupd: firmware update support')
 groups=(plasma)
-#source=(https://download.kde.org/stable/plasma/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-source=(https://download.kde.org/stable/plasma/${pkgver}/$pkgname-$pkgver.tar.xz{,.sig})
+source=(https://download.kde.org/stable/plasma/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
 sha256sums=('93571e5ee5af1e348b93eea1d657c20387b543225037200cab557aef62fa48a1'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
