--- a/kwayland/x86_64/extra/PKGBUILD
+++ b/kwayland/x86_64/extra/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kwayland
-pkgver=5.94.0
-pkgrel=2
+pkgver=5.95.0
+pkgrel=1
 pkgdesc='Qt-style Client and Server library wrapper for the Wayland libraries'
 arch=(x86_64)
 url='https://www.kde.org'
@@ -12,17 +12,11 @@ license=(LGPL)
 depends=(qt5-wayland)
 makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc wayland-protocols plasma-wayland-protocols)
 groups=(kf5)
-source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig}
-        fix-pri.patch)
-sha256sums=('b2a4d8e1b4d81ce798c991cfb34210ba095f6406a37f4714ae3ab64abaca2636'
-            'SKIP'
-            'ffb0188e44140a015b2a66a3d5ef230c1cada4cb640f80d9e0522855376d8e53')
+source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
+sha256sums=('2b8fa6f1cb0e5663cfdec98bb6ebcbe5ceec5e39f71ed0c8fbac5c7cd20c472d'
+            'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 options=(debug)
-
-prepare() {
-  patch -d $pkgname-$pkgver -p1 < fix-pri.patch # Fix include path in the pri file
-}
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
