[testing] -> [extra] 'plasma-systemmonitor-5.25.0-1' move

--- a/plasma-systemmonitor/x86_64/extra/PKGBUILD
+++ b/plasma-systemmonitor/x86_64/extra/PKGBUILD
@@ -1,17 +1,17 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=plasma-systemmonitor
-pkgver=5.24.5
+pkgver=5.25.0
 pkgrel=1
 pkgdesc='An interface for monitoring system sensors, process information and other system resources'
 arch=(x86_64)
 url='https://kde.org/plasma-desktop/'
 license=(GPL LGPL)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-depends=(ksystemstats kitemmodels qqc2-desktop-style kquickcharts)
+depends=(ksystemstats kitemmodels qqc2-desktop-style kquickcharts kdeclarative)
 makedepends=(extra-cmake-modules)
 groups=(plasma)
-sha256sums=('156bd761c4e2e334475ed0e7d0de6bc6f5009197f168d53c846c5c5b67e1a0ef'
+sha256sums=('d9493c828845f5b32aeabb6b91e39f8fa52b175b4a7671c32840110621fe308c'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
