--- a/kwayland-integration/x86_64/extra/PKGBUILD
+++ b/kwayland-integration/x86_64/extra/PKGBUILD
@@ -1,17 +1,17 @@
 # Maintainer:Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kwayland-integration
-pkgver=5.24.5
+pkgver=5.25.0
 pkgrel=1
 pkgdesc='Provides integration plugins for various KDE frameworks for the wayland windowing system'
 arch=(x86_64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
-depends=(kwindowsystem kidletime kwayland kguiaddons)
+depends=(kwindowsystem kidletime kwayland)
 makedepends=(extra-cmake-modules wayland-protocols)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('806a9607bb70f95b08ccad55f28eaf0a85adc1439afa2d2717b7c9d6c33022ec'
+sha256sums=('b3472a28568d1ad1d86d7183e0c34e3d64e09faaf346deeacaa54a44aaa3f651'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
