--- a/kwrited/x86_64/extra/PKGBUILD
+++ b/kwrited/x86_64/extra/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kwrited
-pkgver=5.24.5
+pkgver=5.25.0
 pkgrel=1
 pkgdesc='KDE daemon listening for wall and write messages'
 arch=(x86_64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
-depends=(kpty knotifications kdbusaddons)
+depends=(kpty knotifications kdbusaddons oxygen-sounds)
 makedepends=(extra-cmake-modules kdoctools)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('6204a31fe1e160c8d664e68b30a1d91d31ead2bbfd7cd5841eeb39cb91dcd23d'
+sha256sums=('4b7f3f1c513028d91f65d16f8b44ba4f980889341aa430394177b569847baeb3'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
