[trunk] -> [community] 'libfm-qt-1.1.0-3' add

--- a/libfm-qt/trunk/PKGBUILD
+++ b/libfm-qt/trunk/PKGBUILD
@@ -1,9 +1,9 @@
-# Maintainer: Jerome Leclanche <jerome@leclan.ch>
+# Maintainer: qontinuum <qontinuum@artixlinux.org>
 # Maintainer: Chih-Hsuan Yen <yan12125@archlinux.org>
 
 pkgname=libfm-qt
 pkgver=1.1.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Core library of PCManFM-Qt (Qt binding for libfm)"
 arch=("x86_64")
 url="https://github.com/lxqt/$pkgname"
