--- a/kwin/x86_64/extra/PKGBUILD
+++ b/kwin/x86_64/extra/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=kwin
 pkgver=5.25.0
-pkgrel=1
+pkgrel=2
 pkgdesc='An easy to use, but flexible, composited Window Manager'
 arch=(x86_64)
 url='https://kde.org/plasma-desktop/'
@@ -34,4 +34,7 @@ build() {
 
 package() {
   DESTDIR="$pkgdir" cmake --install build
+
+  #remove systemd service
+  rm -r $pkgdir/usr/lib/systemd
 }
