[trunk] -> [testing] 'xdg-desktop-portal-kde-5.25.1-1' add

--- a/xdg-desktop-portal-kde/trunk/PKGBUILD
+++ b/xdg-desktop-portal-kde/trunk/PKGBUILD
@@ -29,4 +29,7 @@ build() {
 
 package() {
   DESTDIR="$pkgdir" cmake --install build
+
+  #remove systemd service
+  rm -r $pkgdir/usr/lib/systemd
 }
