--- a/xdg-desktop-portal-kde/x86_64/testing/PKGBUILD
+++ b/xdg-desktop-portal-kde/x86_64/testing/PKGBUILD
@@ -29,4 +29,7 @@ build() {
 
 package() {
   DESTDIR="$pkgdir" cmake --install build
+
+  #remove systemd service
+  rm -r $pkgdir/usr/lib/systemd
 }
