--- a/cinnamon-control-center/x86_64/community/PKGBUILD
+++ b/cinnamon-control-center/x86_64/community/PKGBUILD
@@ -1,5 +1,4 @@
-# Maintainer: Chris Cromer <cromer@artixlinux.org>
-# Contributor: Bruno Pagani <archange@archlinux.org>
+# Maintainer: qontinuum <qontinuum@artixlinux.org>
 # Contributor: Eli Schwartz <eschwartz@archlinux.org>
 # Contributor: Alexandre Filgueira <alexfilgueira@cinnarch.com>
 # Based on gnome-control-center:
@@ -7,8 +6,8 @@
 # Jan de Groot <jgc@archlinux.org>
 
 pkgname=cinnamon-control-center
-pkgver=5.2.1
-pkgrel=5
+pkgver=5.4.2
+pkgrel=1
 pkgdesc="The Control Center for Cinnamon"
 arch=(x86_64)
 url="https://github.com/linuxmint/${pkgname}"
@@ -20,17 +19,9 @@ optdepends=('cinnamon-translations: i18n'
             'gnome-online-accounts: for the online accounts module')
 makedepends=(meson samurai gnome-online-accounts)
 options=(!emptydirs)
-source=(${url}/archive/${pkgver}/${pkgname}-${pkgver}.tar.gz
-        ${pkgname}-openvpn-widget-fix.patch::${url}/commit/0f4d212874c4fbee18b860963d0a5c7bd54dcfd1.patch)
-sha256sums=('977ac52cf8bcdea99c03c6455f29276a57a605839cf16d190db2088df243366d'
-            '03a1e522046f45f15eb21eae386a100ad5f81840c2027477188679884b5b3dc2')
-b2sums=('826494b8f8a4dead32d6031d7b4b2a44d357b3e8fedf1065b61193caa86ad433ba68fd9344f70bbce77bb94e086ae15f8854dc73916a5f60c49b1b2bd9e7101c'
-        '4dd72e4f76ad9308083861a5bbca8f2742eeed544984ace88df1913311fa3f344f31f98ca67ca396ad0cb2879bdc4b31fdbc17adc03d1948d827279eb402439d')
-
-prepare() {
-  cd ${pkgname}-${pkgver}
-  patch -p1 < ../${pkgname}-openvpn-widget-fix.patch
-}
+source=(${url}/archive/${pkgver}/${pkgname}-${pkgver}.tar.gz)
+sha256sums=('a2ca00bf5781649a6a95a06e920494c0527fd098f497bf1a2c2d31af4fc7824f')
+b2sums=('9b6b60765366c2905f2a3250ecd090e7e54fdc015b34b11b38a53eac8bbd896b05b5b30e07a1ca8f3c47b01d86271cf9574b21598dc98f514b9c1739d31e429f')
 
 build() {
   mkdir -p build
