--- a/cinnamon-settings-daemon/x86_64/community/PKGBUILD
+++ b/cinnamon-settings-daemon/x86_64/community/PKGBUILD
@@ -1,10 +1,10 @@
-# Maintainer: Eli Schwartz <eschwartz@archlinux.org>
+# Maintainer: qontinuum <qontinuum@artixlinux.org>
 # Contributor: Alexandre Filgueira (faidoc) <alexfilgueira@antergos.com>
 # Contributor: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
 
 pkgname=cinnamon-settings-daemon
-pkgver=5.2.0
-pkgrel=2.1
+pkgver=5.4.1
+pkgrel=1
 pkgdesc="The Cinnamon Settings daemon"
 arch=('x86_64')
 url="https://github.com/linuxmint/${pkgname}"
@@ -16,12 +16,12 @@ optdepends=('cinnamon-translations: i18n')
 makedepends=('meson' 'samurai' 'xf86-input-wacom')
 options=('!emptydirs')
 source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/${pkgver}.tar.gz")
-sha512sums=('ae076956715bc7b47746868df0f1cb4034a8ce26b2d64878c74654f08a4498155063f16bf7972316fa138f72e10a82e8589fdb607f8072bbcd92e106bedbe98e')
-b2sums=('aca6aac0a7b85fa9fb60f1101e0027d5faf3f6d95f7d306ae0ad9dd2e19bb1b48ab4333bbcdff5405b52c306f67eb34bfce895b37529d3ce015182aac41dcf07')
+sha512sums=('0ddf599aed4f7debd357e38ab68710c66a3055f183379e989c3a5dc6ea7b03c90941d5c9e0006513215e070561e0596e8428f6028ffe8e0131c5c82dab843e6c')
+b2sums=('aa66996614b5672f032964aad6da1373f848bc025203bfaca84726b371667c4e465f2804535909fd22f1d39e1141a69556e5c2e176f6cc1e9590df7324ca0937')
 
 build() {
-    mkdir -p "${srcdir}"/${pkgname}-${pkgver}/builddir
-    cd "${srcdir}"/${pkgname}-${pkgver}/builddir
+    mkdir -p ${pkgname}-${pkgver}/builddir
+    cd ${pkgname}-${pkgver}/builddir
 
     meson --prefix=/usr \
           --libexecdir="/usr/lib/${pkgname}" \
@@ -32,7 +32,7 @@ build() {
 }
 
 package() {
-    cd "${srcdir}"/${pkgname}-${pkgver}/builddir
+    cd ${pkgname}-${pkgver}/builddir
 
      DESTDIR="${pkgdir}" samu install
 }
