--- a/neovim/x86_64/community/PKGBUILD
+++ b/neovim/x86_64/community/PKGBUILD
@@ -1,11 +1,11 @@
-# Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
+# Maintainer: Nathan Owens <ndowens@artixlinux.org>
 # Maintainer: Caleb Maclennan <caleb@alerque.com>
 # Contributor: Florian Walch <florian+aur@fwalch.com>
 # Contributor: Florian Hahn <flo@fhahn.com>
 
 pkgname=neovim
-pkgver=0.7.0
-pkgrel=3
+pkgver=0.7.2
+pkgrel=1
 pkgdesc='Fork of Vim aiming to improve user experience, plugins, and GUIs'
 arch=('x86_64')
 url='https://neovim.io'
@@ -20,7 +20,7 @@ optdepends=('python-neovim: for Python 3 plugin support (see :help python)'
             'wl-clipboard: for clipboard support on wayland (see :help clipboard)')
 options=(debug)
 source=("https://github.com/neovim/neovim/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz")
-sha512sums=('3597c54fb925a4d607bca9ba0fdb37df90ecb816da99f52baf46cc2ec79727a55048ba1d8d22c8e7d61f0e8e35546326b1d0d15c0a91de8bf5bc529c45fb1ce0')
+sha512sums=('04d0fa5b23018531b70b53271821bf6944cde1bcec2210b99f5888e1339cd38f57feaa8e40874a3a504930e6614980947f31852185cbcd2ce106a0867896dd79')
 
 build() {
   export PKG_CONFIG_PATH="/usr/lib/libvterm01/pkgconfig:$PKG_CONFIG_PATH"
