--- a/js91/x86_64/extra/PKGBUILD
+++ b/js91/x86_64/extra/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
+# Maintainer: Nathan Owens <ndowens@artixlinux.org>
 
 pkgname=js91
 pkgver=91.11.0
@@ -110,12 +110,11 @@ check() {
     basic
   )
 
-# Check fails; just skip
-#  cd firefox-$pkgver/obj
-#  make -C js/src check-jstests check-jit-test \
-#    JSTESTS_EXTRA_ARGS="${jstests_extra_args[*]}" \
-#    JITTEST_EXTRA_ARGS="${jittest_extra_args[*]}" \
-#    JITTEST_TEST_ARGS="${jittest_test_args[*]}"
+  cd firefox-$pkgver/obj
+  make -C js/src check-jstests check-jit-test \
+    JSTESTS_EXTRA_ARGS="${jstests_extra_args[*]}" \
+    JITTEST_EXTRA_ARGS="${jittest_extra_args[*]}" \
+    JITTEST_TEST_ARGS="${jittest_test_args[*]}"
 }
 
 package() {
