--- a/drkonqi/x86_64/extra/PKGBUILD
+++ b/drkonqi/x86_64/extra/PKGBUILD
@@ -1,8 +1,8 @@
-# Maintainer:Antonio Rojas <arojas@archlinux.org>
+# Maintainer: artist <artist@artixlinux.org>
 
 pkgname=drkonqi
-pkgver=5.25.1
-pkgrel=1.2
+pkgver=5.25.2
+pkgrel=1
 pkgdesc='The KDE crash handler'
 arch=(x86_64)
 url='https://kde.org/plasma-desktop/'
@@ -12,7 +12,7 @@ makedepends=(extra-cmake-modules)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig}
         no-systemd.patch)
-sha256sums=('c0b7e1d7949d629617abdde9aafd6704ddb2b66a253cceaa07ab45a055ffea90'
+sha256sums=('7e60bfb6a5f8cdfc4198ed133b633a9648e6d9082a78be5454111b3c37423ea9'
             'SKIP'
             'b529848e4d4d41675578748e6c8a87bfd875a8ac9af53c988ea5bebcea3de1b5')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
