--- a/xviewer/x86_64/community/PKGBUILD
+++ b/xviewer/x86_64/community/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Chris Cromer <cromer@artixlinux.org>
 
 pkgname=xviewer
-pkgver=3.2.6
+pkgver=3.2.7
 pkgrel=1
 pkgdesc="A simple and easy to use image viewer. X-Apps Project."
 arch=('x86_64')
@@ -10,11 +10,12 @@ depends=('xapp' 'gtk3' 'cinnamon-desktop' 'libpeas' 'libexif' 'libjpeg-turbo'
          'exempi')
 makedepends=('meson' 'samurai' 'gobject-introspection' 'librsvg' 'itstool' 'gtk-doc')
 optdepends=('xviewer-plugins: Extra plugins'
-            'librsvg: for scaling svg images')
+            'librsvg: for scaling svg images'
+            'webp-pixbuf-loader: webp image support')
 url='https://github.com/linuxmint/xviewer'
 
 source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/${pkgver}.tar.gz")
-md5sums=('24603a5c4d990d25156bccec50d33089')
+md5sums=('84d6c703a0561b8440b7d1bbba558800')
 
 build() {
   artix-meson ${pkgname}-${pkgver} build \
