[trunk] -> [staging] 'openbabel-3.1.1-4' add

--- a/openbabel/trunk/PKGBUILD
+++ b/openbabel/trunk/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Nathan Owens <ndowens@artixlinux.org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 # Contributor: Damir Perisa <damir.perisa@bluewin.ch>
 
