--- a/prison/x86_64/testing/PKGBUILD
+++ b/prison/x86_64/testing/PKGBUILD
@@ -10,7 +10,8 @@ arch=(x86_64)
 url='https://community.kde.org/Frameworks'
 license=(GPL)
 depends=(qt5-multimedia libdmtx qrencode zxing-cpp)
-makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc qt5-declarative)
+#makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc qt5-declarative)
+makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc qt5-declarative 'zxing-cpp=1.3.0')
 optdepends=('qt5-declarative: QML bindings')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
