[trunk] -> [community] 'herbstluftwm-0.9.4-2' add

--- a/herbstluftwm/trunk/PKGBUILD
+++ b/herbstluftwm/trunk/PKGBUILD
@@ -1,9 +1,9 @@
-# Maintainer: Jonathan Steel <jsteel at archlinux.org>
+# Maintainer: Nathan Owens <ndowens@artixlinux.org>
 # Contributor: thorsten w. <p@thorsten-wissmann.de>
 
 pkgname=herbstluftwm
 pkgver=0.9.4
-pkgrel=1
+pkgrel=2
 pkgdesc="Manual tiling window manager for X"
 arch=('x86_64')
 url="https://herbstluftwm.org"
