[trunk] -> [community] 'obs-studio-27.2.4-2' add

--- a/obs-studio/trunk/PKGBUILD
+++ b/obs-studio/trunk/PKGBUILD
@@ -1,9 +1,9 @@
-# Maintainer: Jonathan Steel <jsteel at archlinux.org>
+# Maintainer: Nathan Owens <ndowens@artixlinux.org>
 # Contributor: Benjamin Klettbach <b.klettbach@gmail.com>
 
 pkgname=obs-studio
 pkgver=27.2.4
-pkgrel=1
+pkgrel=2
 pkgdesc="Free, open source software for live streaming and recording"
 arch=('x86_64')
 url="https://obsproject.com"
